fixed footer alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-Button{
-  margin: 25px;
+.Header-Button {
+  margin: 20px;
+}
+
+.Submit-Button {
+  font-size: 12px;
+  color: black;
+  background-color: white;
+  border: 1px solid gray;
 }
 
 .App {
@@ -26,14 +33,17 @@ Button{
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding-bottom: 80px;
+  padding-bottom: 100px;
   padding-top: 80px;
 }
 
 .App-footer{
   background-color: yellow;
-  height: 50px;
+  height: 80px;
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   bottom: 0;
   width: 100%;
 }
@@ -45,7 +55,7 @@ Button{
   align-items: left;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  background-color: #a8e1f7;
+  background-color: #00b7ff;
 }
 
 .App-basic {
@@ -78,10 +88,5 @@ Button{
   background-color: red;
   margin: 20px 5px ;
   border-radius: 0.62em;
-}
-
-.basic-page-container {
-  flex: 1; /* Expand to fill remaining space */
-  overflow-y: auto; /* Add scrollbars if content exceeds height */
 }
 
